# svdocgen

./: Cargo.toml  LICENSE  README.md  prj
.github/workflows/: release.yml
assets/: Makefile
assets/images/: Makefile  logo.txt
assets/js/: highlight.js  loadwavedrom.js
docs/: index.md
samples/: Makefile
samples/JtagCoreDbg/: JtagCoreDbg.md
samples/sample1/: And3.md  And3.sv  ApbIf.sv  Dff.sv  Mux2.sv  MyClass.sv  MyPkg.sv  RippleCarryAdder.sv
samples/sample1/doc/: Doc1.md
src/: args.rs  fsnode.rs  lib.rs  main.rs
src/mdbook/: build.rs  files.rs  generate.rs  mod.rs  svclass.rs  sviface.rs  svmodule.rs  svpar.rs  svpkg.rs
